tests/generate/snapshots/r#mod__generate__generate_with_private_component_profile@README.md.snap
---
source: tests/generate/mod.rs
expression: input
input_file: tests/test-result/.tmpBNDC8h/README.md
---
---
title: Release Bundles
---

<!--
This file is generated by retoki. Do not edit it manually; any changes will be
overwritten the next time the release documentation is generated.
-->
# OpenTalk Release Bundles

## Release Announcements



## 25.0

Supported until: 2026-01-01

* **Releases**
    * [**v25.0.0** (2025-07-01)](25.0.0/README.md)

## 24.8

Supported until: 2024-09-19

* **Releases**
    * [**v24.8.1** (2024-07-30)](24.8.1/README.md)
    * [**v24.8.0** (2024-07-19)](24.8.0/README.md)


# Component lookup table

| Release |  [web-frontend](components/web-frontend.md) |
| ------- | ---------- |
| [**v25.0.0**](25.0.0/README.md) | [v1.20.0](https://git.opentalk.dev/opentalk/frontend/web/web-app/-/releases/v1.20.0) |
| [**v24.8.1**](24.8.1/README.md) | [v1.17.2](https://git.opentalk.dev/opentalk/frontend/web/web-app/-/releases/v1.17.2) |
| [**v24.8.0**](24.8.0/README.md) | [v1.17.0](https://git.opentalk.dev/opentalk/frontend/web/web-app/-/releases/v1.17.0) |


---

Generation of this document was supported by [retoki](https://git.opentalk.dev/opentalk/tools/retoki).
